--- a/templates/components/module_board_component.mustache
+++ b/templates/components/module_board_component.mustache
@@ -14,7 +14,7 @@
     </div>
     <div class="mod {{# is_resource }}resource_mod{{/ is_resource }}" data-toggle="tooltip" data-placement="top" title="{{ modfullname }}">
         <a class="icon" href="{{ view_href }}" {{# view_blank }}target="_blank"{{/ view_blank }}>
-            <img src="{{{ icon }}}" alt="">
+            {{{ html_icon }}}
         </a>
     </div>
     <div class="text">
