--- a/templates/module_folder_icon_component.mustache
+++ b/templates/module_folder_icon_component.mustache
@@ -18,12 +18,8 @@
 
 
 }}
-<div class="module-component-cbe">
-    <div class="mod {{ modname }} {{# is_resource }}resource_mod{{/ is_resource }}" data-toggle="tooltip" data-placement="top" title="{{ modfullname }}">
-        {{{ html_icon }}}
-    </div>
-    <div class="data">
-        <a class="title" href="{{ view_url }}">{{# shortentext }} 50, {{ name }} {{/ shortentext }}</a>
-        <p class="section">{{# shortentext }} 50, {{ sectionname }} {{/ shortentext }}</p>
-    </div>
+<div class="module-resource-icon-component-cbe folder">
+    <svg class="theme-cbe-icon"  xmlns="http://www.w3.org/2000/svg" width="325.889" height="217.259" viewBox="0 0 325.889 217.259">
+        <path id="folder-open-solid" d="M324.018,193.05l-40.976,70.244a36.208,36.208,0,0,1-31.277,17.965H25.474a13.579,13.579,0,0,1-11.729-20.421l40.976-70.244A36.21,36.21,0,0,1,86,172.63H312.29A13.578,13.578,0,0,1,324.018,193.05ZM86,154.525H271.574V127.367a27.157,27.157,0,0,0-27.157-27.157H153.892L117.682,64H27.157A27.157,27.157,0,0,0,0,91.157V248.47l39.082-67A54.5,54.5,0,0,1,86,154.525Z" transform="translate(0 -64)"/>
+    </svg>
 </div>
