--- a/templates/module_page_icon_component.mustache
+++ b/templates/module_page_icon_component.mustache
@@ -18,12 +18,10 @@
 
 
 }}
-<div class="module-component-cbe">
-    <div class="mod {{ modname }} {{# is_resource }}resource_mod{{/ is_resource }}" data-toggle="tooltip" data-placement="top" title="{{ modfullname }}">
-        {{{ html_icon }}}
-    </div>
-    <div class="data">
-        <a class="title" href="{{ view_url }}">{{# shortentext }} 50, {{ name }} {{/ shortentext }}</a>
-        <p class="section">{{# shortentext }} 50, {{ sectionname }} {{/ shortentext }}</p>
-    </div>
+<div class="module-resource-icon-component-cbe page">
+
+    <svg class="theme-cbe-icon" xmlns="http://www.w3.org/2000/svg" width="319.715" height="255.778" viewBox="0 0 319.715 255.778">
+        <path id="Icon_material-web" data-name="Icon material-web" d="M384.049,128H128.285a31.935,31.935,0,0,0-31.813,31.976L96.309,351.8a32.072,32.072,0,0,0,31.976,31.976H384.049A32.071,32.071,0,0,0,416.024,351.8V159.976A32.07,32.07,0,0,0,384.049,128ZM304.123,351.8H128.285V287.8H304.123Zm0-79.925H128.285V207.871H304.123ZM384.049,351.8H320.043V207.925h64.006Z" transform="translate(-96.309 -128)"/>
+    </svg>
+
 </div>
