--- a/templates/module_resource_icon_component.mustache
+++ b/templates/module_resource_icon_component.mustache
@@ -18,12 +18,10 @@
 
 
 }}
-<div class="module-component-cbe">
-    <div class="mod {{ modname }} {{# is_resource }}resource_mod{{/ is_resource }}" data-toggle="tooltip" data-placement="top" title="{{ modfullname }}">
-        {{{ html_icon }}}
-    </div>
-    <div class="data">
-        <a class="title" href="{{ view_url }}">{{# shortentext }} 50, {{ name }} {{/ shortentext }}</a>
-        <p class="section">{{# shortentext }} 50, {{ sectionname }} {{/ shortentext }}</p>
-    </div>
+<div class="module-resource-icon-component-cbe resource">
+
+    <svg class="theme-cbe-icon" xmlns="http://www.w3.org/2000/svg" width="250.231" height="290" viewBox="0 0 250.231 290">
+        <path id="FontAwsome_file-pdf_" data-name="FontAwsome file-pdf " d="M299.25,193.564H388.5L386.5,360c0,25-10.682,33-25,33h-4l-194-1c-8.675.02-25-6-25-27h0V140c-.023-7.482-4-32,22-37h123v76.979C283.523,187.473,290.561,193.544,299.25,193.564Zm84.658-31.13-64.316-55.473a17.11,17.11,0,0,0-11.2-3.961H304.5v72.451h84V172A12.667,12.667,0,0,0,383.908,162.434Z" transform="translate(-138.269 -103)" />
+    </svg>
+
 </div>
