--- a/templates/module_tresipuntvideo_icon_component.mustache
+++ b/templates/module_tresipuntvideo_icon_component.mustache
@@ -18,12 +18,8 @@
 
 
 }}
-<div class="module-component-cbe">
-    <div class="mod {{ modname }} {{# is_resource }}resource_mod{{/ is_resource }}" data-toggle="tooltip" data-placement="top" title="{{ modfullname }}">
-        {{{ html_icon }}}
-    </div>
-    <div class="data">
-        <a class="title" href="{{ view_url }}">{{# shortentext }} 50, {{ name }} {{/ shortentext }}</a>
-        <p class="section">{{# shortentext }} 50, {{ sectionname }} {{/ shortentext }}</p>
-    </div>
+<div class="module-resource-icon-component-cbe tresipuntvideo">
+    <svg class="theme-cbe-icon" xmlns="http://www.w3.org/2000/svg" width="348.011" height="231.992" viewBox="0 0 348.011 231.992">
+        <path id="Icon_awesome-video" data-name="Icon awesome-video" d="M284.62,140H110.373A28.873,28.873,0,0,0,81.5,168.873V343.12a28.872,28.872,0,0,0,28.873,28.872H284.62a28.871,28.871,0,0,0,28.872-28.872V168.873A28.872,28.872,0,0,0,284.62,140Zm114.435,22.776-66.216,45.683v95.1l66.216,45.61a19.376,19.376,0,0,0,30.456-15.594V178.37a19.376,19.376,0,0,0-30.456-15.594Z" transform="translate(-81.5 -140)"/>
+    </svg>
 </div>
