--- a/scss/base/_icons.scss
+++ b/scss/base/_icons.scss
@@ -1,20 +1,43 @@
 body[data-theme='cbe'] {
 
   .activity {
-    &.modtype_url,
-    &.modtype_tresipuntvideo,
-    &.modtype_tresipuntaudio,
-    &.modtype_folder,
-    &.modtype_page,
-    &.modtype_resource {
-      .activityinstance>a.aalink img.iconlarge.activityicon {
-        background-color: $primary-color-light2 !important;
-        border-radius: 20px !important;
-        padding: 15px;
-      }
-    }
 
     .activityinstance {
+      >a.aalink,
+      >.inplaceeditable >a.aalink {
+        .cbe_icon_mod {
+          background-color: $primary-color;
+          border-radius: 51px;
+          display: inline-flex !important;
+          align-items: center;
+          width: 60px;
+          height: 60px;
+          justify-content: center;
+          margin-right: 10px;
+          min-width: 60px;
+          &.resource {
+            background-color: white;
+            border: 4px solid $primary-color;
+            .module-resource-icon-component-cbe {
+              svg.theme-cbe-icon {
+                width: 27px;
+                height: 27px;
+                fill: $primary-color;
+              }
+              &.url {
+                svg.theme-cbe-icon {
+                  stroke: $primary-color;
+                }
+              }
+            }
+          }
+          img.iconlarge.activityicon {
+            width: 27px;
+            height: 27px;
+            margin: 0;
+          }
+        }
+      }
       >a.aalink {
         display: flex !important;
         align-items: center;
@@ -22,28 +45,16 @@ body[data-theme='cbe'] {
         justify-content: normal;
         flex-direction: row;
         padding-left: 15px !important;
-
-        img.iconlarge.activityicon {
-          background-color: $primary-color;
-          border-radius: 10px;
-          padding: 10px;
-          width: 50px;
-          height: 50px;
+        &.dimmed {
+          .cbe_icon_mod {
+            opacity: 0.5;
+          }
         }
       }
       >.inplaceeditable {
         >a.aalink {
-          img.iconlarge.activityicon {
-            background-color: $primary-color;
-            padding: 7px;
-            border-radius: 10px;
-            width: 50px;
-            height: 50px;
-          }
-          span.instancename {
-            position: relative;
-            top: -6px;
-          }
+          display: inline-flex;
+          align-items: center;
         }
         >a.quickeditlink.aalink {
           position: relative;
