--- a/scss/pages/_course.scss
+++ b/scss/pages/_course.scss
@@ -239,7 +239,9 @@ body[data-theme='cbe'][data-role='user'] {
 
 }
 
-body[data-theme='cbe'][data-role='user'].path-mod {
+body[data-theme='cbe'][data-role='user'].path-mod,
+body[data-theme='cbe'][data-role='user'].path-grade,
+body[data-theme='cbe'][data-role='user'].path-admin {
   #page-content.course {
     #region-main-box {
       #left-menu-course {
