--- a/scss/pages/_moreinfo.scss
+++ b/scss/pages/_moreinfo.scss
@@ -53,6 +53,7 @@ body[data-theme='cbe'][data-role='user'] {
             width: 60px;
             height: 60px;
             min-width: 60px;
+            margin: 15px;
           }
           .text {
             margin: 19px 175px 20px 0;
