--- a/scss/pages/_course.scss
+++ b/scss/pages/_course.scss
@@ -104,6 +104,9 @@ body[data-theme='cbe'][data-role='user'] {
                   &.folder {
                     background-image: url('[[pix:mod_folder|icon]]');
                   }
+                  &.h5pactivity {
+                    background-image: url('[[pix:mod_h5pactivity|icon]]');
+                  }
                 }
                 .data {
                   display: flex;
