--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -177,6 +177,9 @@ body[data-theme='cbe'][data-role="user"] {
                   &.folder {
                     background-image: url('[[pix:mod_folder|icon]]');
                   }
+                  &.h5pactivity {
+                    background-image: url('[[pix:mod_h5pactivity|icon]]');
+                  }
                 }
                 .text {
                   padding-left: 20px;
