--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -39,7 +39,7 @@ body[data-theme='cbe'][data-role="user"] {
               left: 0;
               position: absolute;
               border-radius: 12px;
-              bottom: 0px;
+              bottom: 0;
             }
           }
         }
@@ -66,9 +66,6 @@ body[data-theme='cbe'][data-role="user"] {
                 border-radius: 30px;
                 margin-right: 20px;
                 margin-left: 20px;
-                .icon-bigbluebutton {
-                  display: none;
-                }
               }
             }
           }
@@ -95,10 +92,45 @@ body[data-theme='cbe'][data-role="user"] {
                 max-width: 100px;
                 margin-top: 0 !important;
                 margin-bottom: 0 !important;
-                img.icon.icon {
+                display: flex;
+                justify-content: center;
+                .contain_icon {
                   background-color: $primary-color;
-                  padding: 14px;
                   border-radius: 30px;
+                  width: 60px;
+                  height: 60px;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  &.mod_resource,
+                  &.mod_tresipuntvideo,
+                  &.mod_tresipuntaudio,
+                  &.mod_folder,
+                  &.mod_url,
+                  &.mod_page,
+                  &.mod_label,
+                  &.mod_tresipuntshare {
+                    background-color: white;
+                    border: 4px solid $primary-color;
+                    svg.theme-cbe-icon {
+                      height: 27px;
+                      width: 27px;
+                      fill: $primary-color;
+                    }
+                  }
+                  .icon.icon {
+                    height: 27px !important;
+                    width: 27px !important;
+                  }
+                  .icon-bigbluebutton {
+                    background-image: url('[[pix:mod_bigbluebuttonbn|icon]]');
+                    background-size: 27px 27px;
+                    background-repeat: no-repeat;
+                    background-position: 50%;
+                    &:before {
+                      content: "";
+                    }
+                  }
                 }
               }
             }
