--- a/templates/components/module_board_component.mustache
+++ b/templates/components/module_board_component.mustache
@@ -73,25 +73,7 @@
     {{/ is_description }}
 </div>
 {{# is_teacher }}
-        <div data-region="modal-mod-delete" data-cmid="{{ id }}" class="modal fade deletemodule-modal deletemod-modal-lg-{{ id }}" tabindex="-1" role="dialog" aria-labelledby="deletemod-modal-lg-{{ id }}" aria-hidden="true">
-            <div class="modal-dialog modal-lg cbe-modal">
-                <div class="modal-content">
-                    <header>
-                        <h1>{{# str }} delete_mod, theme_cbe, {{ modfullname }} {{/ str }}</h1>
-                        <p>{{# str }} sure_delete_mod, theme_cbe {{/ str }}</p>
-                        <p>{{# str }} sure_delete_mod_detail, theme_cbe {{/ str }}</p>
-                        <h3 class="modal-name"><strong>{{{ name }}}</strong></h3>
-                        <p class="modal-theme">{{ theme }}</p>
-                    </header>
-                    <footer class="modal-footer">
-                        <button class="btn cancel" data-dismiss="modal">{{# str }} cancel, theme_cbe {{/ str }}</button>
-                        <button class="btn btn-primary delete" data-action="delete" >
-                            {{# str }} confirm, theme_cbe {{/ str }}
-                        </button>
-                    </footer>
-                </div>
-            </div>
-        </div>
+    {{> theme_cbe/modals/board_mod_delete }}
 {{/ is_teacher }}
 {{#js}}
     {{# is_teacher }}
