--- a/templates/components/publication_board_component.mustache
+++ b/templates/components/publication_board_component.mustache
@@ -51,24 +51,7 @@
 </div>
 
 {{# is_teacher }}
-    <div data-region="modal-delete" data-cmid="{{ id }}" class="modal fade bd-deletemodule-modal bd-deletemodule-modal-lg-{{ id }}" tabindex="-1" role="dialog" aria-labelledby="deleteModuleModalLabel-{{ id }}" aria-hidden="true">
-        <div class="modal-dialog modal-lg cbe-modal">
-            <div class="modal-content">
-                <header>
-                    <h1>{{# str }} delete_post, theme_cbe {{/ str }}</h1>
-                    <p>{{# str }} sure_delete, theme_cbe {{/ str }}</p>
-                    <p>{{# str }} sure_delete_detail, theme_cbe {{/ str }}</p>
-                    <p class="modal-comment">"{{{ comment }}}"</p>
-                </header>
-                <footer class="modal-footer">
-                    <button class="btn cancel" data-dismiss="modal">{{# str }} cancel, theme_cbe {{/ str }}</button>
-                    <button class="btn btn-primary delete" data-action="delete" >
-                        {{# str }} confirm, theme_cbe {{/ str }}
-                    </button>
-                </footer>
-            </div>
-        </div>
-    </div>
+    {{> theme_cbe/modals/board_pub_delete }}
 {{/ is_teacher }}
 
 {{#js}}
